[package]
name = "timely-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = {version = "0.12.0", features = ["bincode"]}
walkdir = "2"
xdg = "2"
rust-ini = "0.18"
linicon = "2.3"
fuzzy-matcher = "0.3"
